[package]
name = "dcont"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
tracing-futures = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
config = "0.13"
derive_more = "0.99"
humantime-serde = "1"